# 2024_Analysis_MATFWars

./: .gitmodules  README.md
MATFWars_clone/: CMakeLists.txt
MATFWars_clone/resources/: button.qrc  easyFunctionSet.txt  hardFunctionSet.txt  resources.qrc
MATFWars_clone/resources/txt/: leaderboard.txt
MATFWars_clone/server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
MATFWars_clone/src/: Canvas.cpp  Canvas.h  Client.cpp  Client.h  Difficulty.h  Function.cpp  Function.h  FunctionNode.cpp  FunctionNode.h  Obstacle.cpp  Obstacle.h  ObstacleNode.cpp  ObstacleNode.h  Player.cpp  Player.h  PlayerNode.cpp  PlayerNode.h  Timer.cpp  Timer.h  check.cpp  check.h  check.ui  choosedifficulty.cpp  choosedifficulty.h  choosedifficulty.ui  create.cpp  create.h  create.ui  difficult.cpp  difficult.h  difficult.ui  guessgame.cpp  guessgame.h  guessgame.ui  help.cpp  help.h  help.ui  join.cpp  join.h  join.ui  (+24 more)
MATFWars_clone/src/lib/muparser/: muParser.cpp  muParser.h  muParserBase.cpp  muParserBase.h  muParserBytecode.cpp  muParserBytecode.h  muParserCallback.cpp  muParserCallback.h  muParserDLL.cpp  muParserDLL.h  muParserDef.h  muParserError.cpp  muParserError.h  muParserFixes.h  muParserInt.cpp  muParserInt.h  muParserTemplateMagic.h  muParserTest.cpp  muParserTest.h  muParserToken.h  muParserTokenReader.cpp  muParserTokenReader.h
MATFWars_clone/tests/: CMakeLists.txt  function_tests.cpp  main.cpp  obstacle_tests.cpp  player_tests.cpp
clangformat/: clangformat.sh
cppcheck/: cppcheck.sh  result.txt
massif/: massif.sh  result.txt  result_ms_print.txt
memcheck/: memcheck.sh  result.txt  valgrind_supressions.supp
